<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minimal_example_ros2_control</name>
  <version>0.0.0</version>
  <description>ROS2 control plugins and configs for the minimal_example</description>
  <maintainer email="samuel.prouten@heracles-robotics.com">sam</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_add_gmock</test_depend>
  <test_depend>hardware_interface</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
